# IsItFake

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Procfile  README.md  app.yaml  db.sqlite3  isitfake.service  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
IsItFake/: hosts.py  settings.py  urls.py  vision.json  wsgi.py
api/: urls.py  views.py
clickbait/: apps.py  models.py  urls.py  views.py
clickbait/migrations/: 0001_initial.py  0002_auto_20200324_1934.py
deepfakes/: apps.py  models.py  urls.py  views.py
deepfakes/migrations/: 0001_initial.py
deploy/: isitfake.service  www.site
fakenews/: apps.py  models.py  serializers.py  urls.py  views.py
fakenews/migrations/: 0001_initial.py
media/clickbait/: clickbait.txt  forward.csv  hypo.csv  linearSVC.sav  non-clickbait.txt  react.csv  reason.csv  reveal.csv  shock.csv  vec_result.pkl
media/fakenews/: article.txt  links.txt  model.sav
quotexaminer/: apps.py  models.py  urls.py  views.py
quotexaminer/migrations/: 0001_initial.py  0002_userinputmodel_added_on.py
static/: staticfiles.json
static/quotexaminer/: site.txt
staticfiles/: staticfiles.json
staticfiles/admin/css/: forms.8e9f67423063.css  widgets.5e372b41c483.css
templates/clickbait/: graph.html  index.html
templates/deepfakes/: index.html
templates/fakenews/: index.html
templates/quotexaminer/: bg.html  disp.html  index.html
templates/www/: base.html  index.html
www/: apps.py  urls.py  views.py
