[tool.poetry]
name = "isitfake"
version = "2021.0.0"
description = ""
authors = ["Mexson Fernandes <robomex2020@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
google-api-python-client = "^2.12.0"
Django = "2.2.24"
tensorflow = "^2.1.0"
newspaper3k = "^0.2.8"
opencv-python = "4.1.2.30"
psycopg2 = "2.8.4"
django-hosts = "^4.0"
django-pwa = "^1.0.10"
djangorestframework = "^3.12.4"
djangorestframework-api-key = "^2.0.0"
django-cors-headers = "^3.7.0"
scikit-learn = "0.21.3"
google-cloud-vision = "^2.3.2"
pandas = "0.25.3"
whitenoise = "^5.2.0"
Flask = "^2.0.1"
django-dotenv = "^1.4.2"
pytube = "^10.9.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
